dbus (1.4.8-3) UNRELEASED; urgency=low

  * libdbus-1-3 Breaks versions of kdebase-workspace-bin and kde-window-manager
    that suffer from #623492, so partial upgrades don't make KDE unusable
    (Closes: #624333)
  * Policy 3.9.2 (no changes required)
  * De-duplicate short descriptions

 -- Simon McVittie <smcv@debian.org>  Wed, 27 Apr 2011 15:29:59 +0100

dbus (1.4.8-2) unstable; urgency=low

  * Remove jquery.js at the right location
  * Re-upload with non-broken .changes file

 -- Simon McVittie <smcv@debian.org>  Tue, 19 Apr 2011 09:15:04 +0100

dbus (1.4.8-1) unstable; urgency=low

  * New upstream version
    - Use upstream-merged support for installing HTML docs
    - Use upstream-supplied doxygen_to_devhelp.xsl (the Automake integration
      is still a bit broken, so we build it ourselves)
  * Mark dbus, dbus-x11 as Multi-Arch: foreign
  * Remove the unused copy of jquery.js that doxygen now wants to install
  * Move HTML and text documentation from /u/s/d/dbus-1-doc to /u/s/d/dbus
    (see Policy bug #107073 for discussion), leaving behind symlinks to their
    historical locations; this also results in shipping one copy of
    dbus-specification.html rather than two
  * Correctly credit Michael for his changes in the previous changelog entry

 -- Simon McVittie <smcv@debian.org>  Mon, 11 Apr 2011 16:22:48 +0100

dbus (1.4.6-1) unstable; urgency=low

  [ Michael Biebl ]
  * Switch from cdbs to dh.
  * Bump debhelper compatibility level to 8.
  * Remove doxygen call from debian/rules and cleaning up doc/api manually.
    The upstream build system takes care of that already.

  [ Simon McVittie ]
  * New upstream version
    - remove 00_dbus-quiesce-startup-errors.patch, no longer needed
  * Ignore changes to generated Doxygen HTML instead of deleting it in clean,
    for easier use of git-buildpackage
  * Unapply patches after building from git

 -- Simon McVittie <smcv@debian.org>  Thu, 17 Feb 2011 20:12:59 +0000

dbus (1.4.1-2) unstable; urgency=low
