@@ -1,3 +1,14 @@
+From: Sebastian Dröge <slomo@ubuntu.com>
+Subject: Don't abort on fatal warnings by default
+Date: 2006-11-14 15:35:00 +0100
+
+This behaviour can be controlled by the DBUS_FATAL_WARNINGS enviroment
+variable. This will be set to upstream default again at some point so
+if you have an application that prints a DBus warning get it fixed.
+
+Origin: vendor, Debian
+Forwarded: no
+
 Index: b/dbus/dbus-internals.c
 ===================================================================
 --- a/dbus/dbus-internals.c	2010-07-14 00:43:38.000000000 +0200
